[gd_scene load_steps=3 format=3 uid="uid://dthlcsk5o5un6"]

[ext_resource type="Script" uid="uid://bpkqg0jmsw3y4" path="res://Scripts/titlescreen.gd" id="1_p3fck"]

[sub_resource type="LabelSettings" id="LabelSettings_ig5kc"]
font_size = 60
font_color = Color(0.902675, 0.55783, 0.110225, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p3fck")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1178.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 161.0
offset_right = 710.0
offset_bottom = 261.0
text = "START"

[node name="settings" type="Button" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 299.0
offset_right = 710.0
offset_bottom = 399.0
text = "SETTINGS"
icon_alignment = 1

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 444.0
offset_right = 710.0
offset_bottom = 544.0
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 36.0
offset_right = 721.0
offset_bottom = 142.0
text = "Main Menu"
label_settings = SubResource("LabelSettings_ig5kc")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
